--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,13 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
       - run: |
           export CC="zig cc"
-          pip install nuitka
+          pip install -r requirements.txt
+          python -m nuitka hello.py
           
