--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: goto-bus-stop/setup-zig@v2
       - run: |
           export CC="zig cc"
+          zig cc
           pip install -r requirements.txt
           python -m nuitka hello.py
       - uses: actions/upload-artifact@v4
