--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           export CC="zig cc"
           export CXX="zig c++"
           pip install -r requirements.txt
-          python -m nuitka hello.py
+          python -m nuitka --show-scons hello.py
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
