--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,9 @@ jobs:
           cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
       - run: |
-          chmod ugo+x zig-clang.sh
-          export CC="$(pwd)/zig-clang.sh"
+          chmod ugo+x *.sh
+          export CXX="$(pwd)/zig-clang++.sh"
+          export CC="$(pwd)/zig-cc.sh"
           pip install -r requirements.txt
           python -m nuitka --show-scons hello.py
       - uses: actions/upload-artifact@v4
