--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       - uses: goto-bus-stop/setup-zig@v2
       - run: |
           chmod ugo+x *.sh
-          mv zig-cc.sh zig-clang.sh
+          mv zig-cc.sh clang-cc.sh
           export CXX="$(pwd)/zig-clang++.sh"
-          export CC="$(pwd)/zig-clang.sh"
+          export CC="$(pwd)/clang-cc.sh"
           pip install -r requirements.txt
-          python -m nuitka --show-scons hello.py -- clang
+          python -m nuitka --show-scons --lto=no hello.py
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
