--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
           python-version: '3.10'
           cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.11.0
       - run: |
           chmod ugo+x *.sh
           mv zig-cc.sh clang-cc.sh
