--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.12.0-dev.3154+0b744da84
       - run: |
           chmod ugo+x *.sh
           mv zig-cc.sh clang-cc.sh
