--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,8 @@ jobs:
           cache: false
       - run: |
           chmod ugo+x *.sh
-          mv zig-cc.sh clang-cc.sh
           export CXX="$(pwd)/zig-clang++.sh"
-          export CC="$(pwd)/clang-cc.sh"
+          export CC="$(pwd)/zig-clang-cc.sh"
           pip install -r requirements.txt
           python -m nuitka --show-scons --clang hello.py
       - uses: actions/upload-artifact@v4
