--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,12 @@ jobs:
           export CXX="$(pwd)/zig-clang++.sh"
           export CC="$(pwd)/zig-clang-cc.sh"
           pip install -r requirements.txt
-          python -m nuitka --show-scons --clang hello.py
+          python -m nuitka --show-scons --clang --stand-alone hello.py
+          ./hello.dist/hello.bin
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
-          path: nuitka-crash-report.xml
+          path: |
+            nuitka-crash-report.xml
+            hello.dist/**/*
           
