--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
+        target:
+          # - x86_64-linux
+          - x86_64-macos
+          # - x86_64-windows-gnu
+
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v4
@@ -24,6 +29,7 @@ jobs:
         name: Build with Nuikta and Zig
         run: |
           chmod ugo+x *.sh
+          export TARGET=${{ matrix.target }}
           export CXX="$(pwd)/zig-clang++.sh"
           export CC="$(pwd)/zig-clang-cc.sh"
           pip install -r requirements.txt
