--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         target:
-          # - x86_64-linux
-          - x86_64-macos
+          - x86_64-linux
+          # - x86_64-macos
           # - x86_64-windows-gnu
 
     runs-on: ${{matrix.os}}
