--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        target:
-          - x86_64-linux
+        # target:
+        #   - x86_64-linux
           # - x86_64-macos
           # - x86_64-windows-gnu
 
@@ -29,7 +29,7 @@ jobs:
         name: Build with Nuikta and Zig
         run: |
           chmod ugo+x *.sh
-          export TARGET=${{ matrix.target }}
+          # export TARGET=${{ matrix.target }}
           export CXX="$(pwd)/zig-clang++.sh"
           export CC="$(pwd)/zig-clang-cc.sh"
           pip install -r requirements.txt
