--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           python -m nuitka \
             --show-scons \
             --clang \
-            --onefile \
+            --standalone \
             hello.py
           ./hello.bin
       - uses: actions/upload-artifact@v4
