--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
             --clang \
             --standalone \
             hello.py
-          ./hello.bin
+          ./hello.dist/hello.bin
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
