--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
           cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          # version: master
+          version: 0.12.0-dev.3161+377ecc6af
           cache: false
       - 
         name: Build with Nuikta and Zig
