--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
           python -m nuitka \
             --show-scons \
             --clang \
-            --standalone \
+            ----onefile \
             hello.py
-          ./hello.dist/hello.bin
+          ./hello.bin
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
