--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
   test:
     strategy:
       matrix:
+        python_version: [3.9, 3.10, 3.11]
         os: [ubuntu-latest]
         # target:
         #   - x86_64-linux
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: ${{matrix.python_version}}
           cache: 'pip' # caching pip dependencies
       - uses: goto-bus-stop/setup-zig@v2
         with:
