--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.9, 3.10, 3.11]
+        python_version: ['3.9', '3.10', '3.11']
         os: [ubuntu-latest]
         # target:
         #   - x86_64-linux
