--static-libpython=yes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           python -m nuitka \
             --show-scons \
             --clang \
+            --static-libpython=yes \
             --standalone \
             hello.py
           ./hello.bin
