--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
-          # - macos-latest
+          - macos-latest
         compiler:
           - zig
           - gcc
