--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: goto-bus-stop/setup-zig@v2
         with:
           # version: master
-          version: 0.12.0-dev.3161+377ecc6af
+          version: 0.13.0
           cache: false
       - 
         name: Build with Nuikta and Zig
