--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           - gcc
         zig_version:
           # - '0.13.0'
-          - 'zig-0.14.0-dev.3239+d7b93c787'
+          - 'zig-0.14.0-dev.3239'
         nuitka_version:
          # - 'factory'
           - '2.6.6'
